[package]

name        = "machine"
version     = "0.2.0"
authors     = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
description = "State machine utilities"
license     = "MIT/Apache-2.0"
repository  = "https://github.com/Geal/machine"
readme      = "./README.md"
keywords    = ["state", "state-machine"]

[dependencies]
syn = {version = "^0.15", features = ["full", "extra-traits"] }
quote = "^0.6"
log = "^0.4"
case = "^1.0"

[lib]
proc-macro = true
