[package]

name        = "machine"
version     = "0.3.0"
authors     = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
description = "State machine utilities"
license     = "MIT/Apache-2.0"
repository  = "https://github.com/rust-bakery/machine"
readme      = "./README.md"
keywords    = ["state", "state-machine"]
edition = "2018"

include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "Cargo.toml",
  "src/lib.rs",
  "tests/*.rs"
]
[dependencies]
syn = {version = "^1", features = ["full", "extra-traits", "parsing"] }
quote = "^1"
log = "^0.4"
case = "^1.0"
proc-macro2 = "^1"

[lib]
proc-macro = true
